testcrate/ui/type_error.stderr
warning: use of deprecated item 'futures': `futures-await` has been merged into the main `futures` repository, please switch to depending directly on `futures` with the `nightly` feature activated
 --> $DIR/type_error.rs:3:1
  |
3 | extern crate futures_await as futures;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: #[warn(deprecated)] on by default

error[E0308]: mismatched types
 --> $DIR/type_error.rs:9:18
  |
9 |     let a: i32 = "a"; //~ ERROR: mismatched types
  |                  ^^^ expected i32, found reference
  |
  = note: expected type `i32`
             found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
